dst_dashboard/k8s/mongodb-dev.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb-dev
  namespace: dst-dashboard
spec:
  serviceName: mongodb-dev
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-dev
  template:
    metadata:
      labels:
        app: mongodb-dev
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - metal-01.he-eu-hel1.misc.vacdst
      tolerations:
        - key: "dedicated"
          operator: "Equal"
          value: "monitoring"
          effect: "PreferNoSchedule"
      containers:
        - name: mongodb-dev
          image: mongo:8
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
              name: mongodb-dev
              protocol: TCP
          volumeMounts:
            - name: mongo-data-dev
              mountPath: /data/db
      volumes:
      - name: mongo-data-dev
        persistentVolumeClaim:
          claimName: dst-mongo-dev-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-dev
  namespace: dst-dashboard
spec:
  type: LoadBalancer
  selector:
    app: mongodb-dev
  ports:
    - name: mongodb-dev
      protocol: TCP
      port: 8021
      targetPort: 27017
