dst_dashboard/k8s/mongodb-prod.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb-prod
  namespace: dst-dashboard
spec:
  serviceName: mongodb-prod
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-prod
  template:
    metadata:
      labels:
        app: mongodb-prod
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - metal-01.he-eu-hel1.misc.vacdst
      tolerations:
        - key: "dedicated"
          operator: "Equal"
          value: "monitoring"
          effect: "PreferNoSchedule"
      containers:
        - name: mongodb-prod
          image: mongo:8
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
              name: mongodb-prod
              protocol: TCP
          volumeMounts:
            - name: mongo-data-prod
              mountPath: /data/db
      volumes:
      - name: mongo-data-prod
        persistentVolumeClaim:
          claimName: dst-mongo-prod-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-prod
  namespace: dst-dashboard
spec:
  type: ClusterIP
  selector:
    app: mongodb-prod
  ports:
    - name: mongodb-prod
      protocol: TCP
      port: 8021
      targetPort: 27017
