dst_dashboard/k8s/frontend.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: dst-dashboard-frontend
  namespace: dst-dashboard
spec:
  serviceName: dst-dashboard-frontend
  replicas: 2
  selector:
    matchLabels:
      app: dst-dashboard-frontend
  template:
    metadata:
      labels:
        app: dst-dashboard-frontend
    spec:
      containers:
      - name: frontend
        image: mamoutoudiarra/dst-dashboard-frontend:dev-0.3
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: http
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "2Gi"
            cpu: "2"
---
apiVersion: v1
kind: Service
metadata:
  name: dst-dashboard-frontend
  namespace: dst-dashboard
spec:
  selector:
    app: dst-dashboard-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dst-dashboard-frontend-ingress
  namespace: dst-dashboard
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - dev.dashboard.lab.vac.dev
    secretName: dashboard-frontend-tls
  rules:
  - host: dev.dashboard.lab.vac.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dst-dashboard-frontend
            port:
              number: 80
